--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,19 +33,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="Portfolio.html">About Me</a>
+                  <a class="nav-link active" aria-current="page" href="Portfolio.html"><b>About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
+                  <a class="nav-link" href="Projects.html"><b>Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Skills.html">Skills</a>
+                    <a class="nav-link" href="Skills.html"><b>Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="Contact Me.html"><b>Contact Me</b></a>
                 </li>
 
               </ul>
