--- a/Skills.html
+++ b/Skills.html
@@ -9,7 +9,12 @@
 
       <!-- -------------BOOSTRAP----LINK-------- -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
+     <!--------frontsome icon--------  -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- ------AOS link -------- -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  </head>
 <body> 
 
 
@@ -35,19 +40,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="Portfolio.html">About Me</a>
+                  <a class="nav-link"  href="Portfolio.html"><b><i class="fa fa-address-book" aria-hidden="true"></i> About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
+                  <a class="nav-link" href="Projects.html"><b> <i class="fa-regular fa-share-from-square"></i> Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Skills.html">Skills</a>
+                    <a class="nav-link active" aria-current="page" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-solid fa-mobile"></i> Contact Me</b></a>
                 </li>
 
               </ul>
@@ -98,7 +103,7 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span class="col-12 col-md-6 col-lg-4">
+        <span data-aos="zoom-out-left"   data-aos-duration="9000" class="col-12 col-md-6 col-lg-4">
             <h4>Database</h4>
 
             <ul>
@@ -107,9 +112,8 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span class="col-12 col-md-6 col-lg-4">
-            <h4>Soft Skills</h4>
-
+        <span data-aos="slide-right"  data-aos-duration="9000" class="col-12 col-md-6 col-lg-4">
+            <h4  >Soft Skills</h4> 
             <ul>
                 <li>Problem-Solving</li>
                 <li>Attention to details</li>
@@ -129,6 +133,7 @@
    </div>
 </div>
 
+<input class="form-control" type="text" >
 
 
 
@@ -140,6 +145,17 @@
 
 
 
+
+  <!-----------AOS ICON-------------  -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<!-- <script>
+  AOS.init();
+</script> -->
+
+<script>
+  AOS.init();
+</script>
 
 
 
