push alll the go

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,11 @@
      <link rel="stylesheet" href="Portfolio.css">
         <!-- -------------BOOSTRAP----LINK-------- -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+      <!--------frontsome icon--------  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <!-- ------AOS link -------- -->
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -33,19 +38,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="Portfolio.html"><b>About Me</b></a>
+                  <a class="nav-link active" aria-current="page" href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp;&nbsp;  About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="Projects.html"><b>Projects</b></a>
+                  <a class="nav-link" href="Projects.html"><b>  <i class="fa-regular fa-share-from-square"></i> &nbsp;&nbsp; Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Skills.html"><b>Skills</b></a>
+                    <a class="nav-link" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> &nbsp;&nbsp; Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact Me.html"><b>Contact Me</b></a>
+                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-brands fa-viber"></i> &nbsp;&nbsp; Contact Me</b></a>
                 </li>
 
               </ul>
@@ -69,14 +74,14 @@
        <span  id="Group-space-2"> 
             <h4 class="border-start border-primary border-3 p-2 "> <span style="color: orangered;">Wel</span>come to my <span style="color: orangered;">Port</span>fo<span style="color: blue;">lio!</span></h4>
             <h5>Hi, I'm  Usman Adams</h5> <br>
-            <p id="paragraph">i'm a 300L Computer science & IT student at Federal University Dutsin-Ma, with a strong passion of web development. my current focus is on front-end development, and i'm acturaly working towords becomimg a full-stack developer by expanding into back-end technologies. i'm form Bassa Local Goverment Area in Kogi State, Nigeria.    </p> 
-            <p  id="paragraph">My journey into tech started with a deep intreast in how website are built and how technology powered every tools we used. that curiosity grew into a passion for web development, especially font-end design. i enjoy writing clean, responsive code that brings  digital ideas to life.</p>
-            <p id="paragraph">I chose web development because i enjoy turning ideas into interactive websites and seeing my code comre to life on screen </p>
-            <p id="paragraph">I work with HTML, CSS, JavaScript, MySQL, and the Boostrape farmework. i've have alos started learning React and i'm currently building my skills in it.</p>
-            <p id="paragraph">I use GitHub to manage and share my projects, and i incorporate interactive JavaScript libraries like Typed.js and AOS to enhance user exprience and design flow in my front-end works.</p>
+            <p data-aos="fade-up"   data-aos-duration="5000"       id="paragraph">i'm a 300L Computer science & IT student at Federal University Dutsin-Ma, with a strong passion of web development. my current focus is on front-end development, and i'm acturaly working towords becomimg a full-stack developer by expanding into back-end technologies. i'm form Bassa Local Goverment Area in Kogi State, Nigeria.    </p> 
+            <p data-aos="fade-up"  data-aos-duration="5000"       id="paragraph">My journey into tech started with a deep intreast in how website are built and how technology powered every tools we used. that curiosity grew into a passion for web development, especially font-end design. i enjoy writing clean, responsive code that brings  digital ideas to life.</p>
+            <p data-aos="fade-up"   data-aos-duration="5000"       id="paragraph">I chose web development because i enjoy turning ideas into interactive websites and seeing my code comre to life on screen </p>
+            <p data-aos="fade-up"   data-aos-duration="5000"           id="paragraph">I work with HTML, CSS, JavaScript, MySQL, and the Boostrape farmework. i've have alos started learning React and i'm currently building my skills in it.</p>
+            <p data-aos="fade-up"   data-aos-duration="5000"         id="paragraph">I use GitHub to manage and share my projects, and i incorporate interactive JavaScript libraries like Typed.js and AOS to enhance user exprience and design flow in my front-end works.</p>
 
        </span>
-    </div>
+    </div> <br><br><br>
     
 
 
@@ -84,7 +89,12 @@
 
 
 
+  <!-----------AOS ICON-------------  -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+  <script>
+    AOS.init();
+  </script>
 
 
     
