--- a/Skills.html
+++ b/Skills.html
@@ -40,19 +40,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link"  href="Portfolio.html"><b><i class="fa fa-address-book" aria-hidden="true"></i> About Me</b></a>
+                  <a class="nav-link"  href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp;&nbsp; About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="Projects.html"><b> <i class="fa-regular fa-share-from-square"></i> Projects</b></a>
+                  <a class="nav-link" href="Projects.html"><b> <i class="fa-regular fa-share-from-square"></i> &nbsp;&nbsp; Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> Skills</b></a>
+                    <a class="nav-link active" aria-current="page" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> &nbsp;&nbsp; Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-solid fa-mobile"></i> Contact Me</b></a>
+                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-brands fa-viber"></i> &nbsp;&nbsp; Contact Me</b></a>
                 </li>
 
               </ul>
@@ -70,7 +70,7 @@
 
       <div class="row gy-5">
         <!-- -------------------------------- -->
-            <span class="col-12 col-md-6 col-lg-4">
+            <span data-aos="fade-up"   data-aos-duration="5000"        class="col-12 col-md-6 col-lg-4">
                 <h4>Fornt-End Technologies</h4>
 
                 <ul>
@@ -83,7 +83,7 @@
             </span>
 
         <!-- -------------------------------- -->
-        <span class="col-12 col-md-6 col-lg-4">
+        <span data-aos="fade-up"   data-aos-duration="5000"           class="col-12 col-md-6 col-lg-4">
             <h4>JavaScript Libraries & Tools</h4>
 
             <ul>
@@ -93,7 +93,7 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span class="col-12 col-md-6 col-lg-4">
+        <span data-aos="fade-up"   data-aos-duration="5000"          class="col-12 col-md-6 col-lg-4">
             <h4>Version Control & Deployment</h4>
 
             <ul>
@@ -103,7 +103,7 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span data-aos="zoom-out-left"   data-aos-duration="9000" class="col-12 col-md-6 col-lg-4">
+        <span data-aos="fade-up"   data-aos-duration="5000"         class="col-12 col-md-6 col-lg-4">
             <h4>Database</h4>
 
             <ul>
@@ -112,7 +112,7 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span data-aos="slide-right"  data-aos-duration="9000" class="col-12 col-md-6 col-lg-4">
+        <span data-aos="fade-up"   data-aos-duration="5000"   class="col-12 col-md-6 col-lg-4">
             <h4  >Soft Skills</h4> 
             <ul>
                 <li>Problem-Solving</li>
@@ -123,7 +123,7 @@
         </span>
 
         <!-- -------------------------------- -->
-        <span class="col-12 col-md-6 col-lg-4">
+        <span data-aos="fade-up"   data-aos-duration="5000" class="col-12 col-md-6 col-lg-4">
             <h4>Currently Exploring</h4>
             <ul>
                 <li>PHP and Laravel  <br> (to build my back-end development skills)</li>
@@ -148,10 +148,6 @@
 
   <!-----------AOS ICON-------------  -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-<!-- <script>
-  AOS.init();
-</script> -->
 
 <script>
   AOS.init();
