--- a/Contact Me.html
+++ b/Contact Me.html
@@ -40,19 +40,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link " href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp;&nbsp; About Me</b></a>
+                  <a class="nav-link " href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true" style="color: blue;"></i> &nbsp;&nbsp; About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="Projects.html"><b>  <i class="fa-regular fa-share-from-square"></i> &nbsp;&nbsp; Projects</b></a>
+                  <a class="nav-link" href="Projects.html"><b>  <i class="fa-regular fa-share-from-square" style="color: orangered;"></i> &nbsp;&nbsp; Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> &nbsp;&nbsp; Skills</b></a>
+                    <a class="nav-link" href="Skills.html"><b> <i class="fa-solid fa-desktop" style="color: green;"></i> &nbsp;&nbsp; Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active"  aria-current="page" href="Contact Me.html"><b> <i class="fa-brands fa-viber"></i> &nbsp;&nbsp; Contact Me</b></a>
+                    <a class="nav-link active"  aria-current="page" href="Contact Me.html"><b> <i class="fa-brands fa-viber" style="color: black;"></i> &nbsp;&nbsp; Contact Me</b></a>
                 </li>
 
               </ul>
@@ -73,18 +73,19 @@
         <label data-aos="fade-up"   data-aos-duration="5000"            id="paragraph" for=""><b>Email:</b> &nbsp; &nbsp; &nbsp; [ <u>Usmanadams551@gmail.com</u> ]</label> <br>
         <label data-aos="fade-up"   data-aos-duration="5000"            id="paragraph"  for=""><b>Location:</b> &nbsp; &nbsp; &nbsp;  Kastina State, Nigeria </label><br><br>
         <label data-aos="fade-up"   data-aos-duration="5000"            id="paragraph" for=""><b>Download My CV:</b></label><br>
-        <a href=""><button class="btn btn-primary">Download CV</button></a><br><br>
+       <!-- ----------download my cv--------- -->
+        <a href="my CV/Usman_Adams_CV.docx" download="my CV/Usman_Adams_CV.docx"><button class="btn btn-primary">Download CV</button></a><br><br>
 
         <label id="paragraph"  for=""><b>Social:</b></label><br> 
         <!-- -------icon under social----------- -->
          <div data-aos="fade-up"   data-aos-duration="5000">
                 <i class="fa-brands fa-github"              style="font-size: 30px;"></i>
-                <i class="fa-brands fa-linkedin"             style="font-size: 30px;"></i>
-                <i class="fa-brands fa-facebook"             style="font-size: 30px;"></i>
-                <i class="fa-brands fa-twitter"              style="font-size: 30px;"></i>
-                <i class="fa-brands fa-viber"                style="font-size: 30px;"></i>
-                <i class="fa-brands fa-square-instagram"     style="font-size: 30px;"></i>
-                <i class="fa-brands fa-whatsapp"             style="font-size: 30px;"></i>
+                <i class="fa-brands fa-linkedin"             style="font-size: 30px; color: blue;"></i>
+                <a href="http://www.facebook.com/Usman Adams" target="_blank"><i class="fa-brands fa-facebook"  style="font-size: 30px;"></i></a>
+                <i class="fa-brands fa-twitter"              style="font-size: 30px; color: green;"></i>
+                <a href="tel: +2349018827571"><i class="fa-brands fa-viber"            style="font-size: 30px; color: black;"></i></a>
+                <i class="fa-brands fa-square-instagram"     style="font-size: 30px; color: palevioletred;"></i>
+                <a href="https://wa.me/2349018827571" target="_blank"> <i class="fa-brands fa-whatsapp"           style="font-size: 30px; color: green;"></i></a>
         </div>
         <!----------- form to get in touch----------- -->
      <br><br>
@@ -115,7 +116,7 @@
        
 
 </div>
- 
+  <br><br><br><br><br><br>
     
 
 
