--- a/Skills.html
+++ b/Skills.html
@@ -40,19 +40,19 @@
                 <h3>Yahaya Usman Adams</h3>
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
                 <li class="nav-item">
-                  <a class="nav-link"  href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp;&nbsp; About Me</b></a>
+                  <a class="nav-link"  href="Portfolio.html"><b> <i class="fa fa-address-book" aria-hidden="true" style="color: blue;"></i> &nbsp;&nbsp; About Me</b></a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="Projects.html"><b> <i class="fa-regular fa-share-from-square"></i> &nbsp;&nbsp; Projects</b></a>
+                  <a class="nav-link" href="Projects.html"><b> <i class="fa-regular fa-share-from-square" style="color: orangered;"></i> &nbsp;&nbsp; Projects</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Skills.html"><b> <i class="fa-solid fa-desktop"></i> &nbsp;&nbsp; Skills</b></a>
+                    <a class="nav-link active" aria-current="page" href="Skills.html"><b> <i class="fa-solid fa-desktop" style="color: green;"></i> &nbsp;&nbsp; Skills</b></a>
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-brands fa-viber"></i> &nbsp;&nbsp; Contact Me</b></a>
+                    <a class="nav-link" href="Contact Me.html"><b> <i class="fa-brands fa-viber" style="color: black;"></i> &nbsp;&nbsp; Contact Me</b></a>
                 </li>
 
               </ul>
