--- a/Welcome Portfolio.html
+++ b/Welcome Portfolio.html
@@ -51,19 +51,19 @@
     Redirecting.textContent = "Welcome to my portfolio"
    }, 4000);
 
-   setInterval(() => {
+   setTimeout(() => {
       Redirecting.textContent = "Preparing your exprience..."
    }, 8000);
 
-   setInterval(() => {
+   setTimeout(() => {
       Redirecting.textContent = "Loading interface..."
    }, 10000);
 
-   setInterval(() => {
+   setTimeout(() => {
       Redirecting.textContent = "Redirecting..."
-         setInterval(() => {
+      setTimeout(() => {
             window.location.href = "Portfolio.html"
-         },1000 );
+         },3000 );
    }, 14000);
 
 
