--- a/Projects.html
+++ b/Projects.html
@@ -53,7 +53,7 @@
                   </li>
 
                 <li class="nav-item">
-                    <a class="nav-link"  href="Contact Me.html"><b> <i class="fa-brands fa-viber" style="color: black;"></i> &nbsp;&nbsp; Contact Me</b></a>
+                    <a class="nav-link" href="Contact Me.php"><b> <i class="fa-brands fa-viber" style="color: black;"></i> &nbsp;&nbsp; Contact Me</b></a>
                 </li>
 
               </ul>
@@ -226,6 +226,17 @@
                                                     </div>
                                             </div>
                                     </div>
+
+                                        <!-- ----game-----Card-------- -->
+                                        <div class="col-12 col-md-6 col-lg-4" style="width: 350px;"       data-aos="fade-up"   data-aos-duration="5000">
+
+                                             <div class="card"  >
+                                                        <img src="Image/game/game11.png" alt="Loading... Game UI Screenshot">
+                                                        <div class="card-body">
+                                                                <span class="card-text"> This is a screenshot of the error i encountered while building my <b>Rock, Paper</b> and <b>Scissor</b> game. this affect a large part of my code, expecially from line <b> 194</b> to <b> 541</b>  it wasn't easy i hard to go back and read through the code line by line just to figure out what went wrong. it took time but it help me understand my mistake better and make me a stronger developer. this expirence thought me the value of petience and proper debugging.</span>
+                                                        </div>
+                                                </div>
+                                        </div>
 
 
 
@@ -440,9 +451,9 @@
 
 <div id="paragraph"               data-aos="fade-up"   data-aos-duration="5000"      > A fully Costom-coded personal partfolio website to showcase my skills, project, and background.
                                   <p  data-aos="fade-up"   data-aos-duration="5000"> it features smooth animation and dynamic text effects for an engaging user experience.</p> 
-                                  <p data-aos="fade-up"   data-aos-duration="5000" ><b>Tools used:</b> HTML, CSS, JavaScript, BooStrap, Typed.js, AOS</p>
+                                  <p data-aos="fade-up"   data-aos-duration="5000" ><b>Tools used:</b> HTML, CSS, JavaScript, PHP, MYSQL, BooStrap, Typed.js, AOS</p>
                                   <p data-aos="fade-up"   data-aos-duration="5000"><b>Check Out My Work:</b> You can view my Presonal Portfolio Website by clicking the link below:</p>
-                                  <p data-aos="fade-up"   data-aos-duration="5000"><b>Visit Website:</b><a href="https://adams899591.github.io/My-------Portfolio--------/Welcome%20Portfolio.html">[ https://adams899591.github.io/My-------Portfolio--------/Welcome%20Portfolio.html ]</a></p>
+                                  <p data-aos="fade-up"   data-aos-duration="5000"><b>Visit Website:</b><a href="http://adams.free.nf/Usman.Portfolio/Welcome%20Portfolio.html">[ http://adams.free.nf/Usman.Portfolio/ <br> Welcome%20Portfolio.html ]</a></p>
                                   <p data-aos="fade-up"   data-aos-duration="5000" ><b>Screenshots Preview:</b> Below are a few Screenshots showing how my Portfolio  looks:</p>
 </div>
 
@@ -583,6 +594,28 @@ See More
                                             </div>
                                     </div>
                             </div>
+
+                                <!-- ----Personal Portfolio Website-----Card-------- -->
+                                <div class="col-12 col-md-6 col-lg-4" style="width: 350px;"           data-aos="fade-up"   data-aos-duration="7000">
+
+                                <div class="card"  >
+                                                <img src="Image/portfolio/portfolio-10.jpg" alt="Loading... Portfolio UI">
+                                                <div class="card-body">
+                                                        <span class="card-text"> <b>Mobile View</b> <br> This image display the sidebar in action, where users can navagate between section like About, Project, Skill and Contact. the menu appers when toggled and hids again when checked - offering a smooth user experience.</span>
+                                                </div>
+                                        </div>
+                                </div>
+
+                                <!-- ----Personal Portfolio Website-----Card-------- -->
+                                <div class="col-12 col-md-6 col-lg-4" style="width: 350px;"           data-aos="fade-up"   data-aos-duration="7000">
+
+                                        <div class="card"  >
+                                                        <img src="Image/portfolio/portfolio-11.jpg" alt="Loading... Portfolio UI">
+                                                        <div class="card-body">
+                                                                <span class="card-text"><b>Mobile View</b> <br>This section highlights my work experience, listing out complected projects and showing how many years of exprience I've gained. it helps visitors explore what i have built and how far I've come.</span>
+                                                        </div>
+                                                </div>
+                                        </div>
 
 
 
